--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,13 +31,14 @@ rustls-native-certs = "0.8.1"
 webpki-roots = "1.0.2"
 tokio-postgres-rustls = "0.13.0"
 dirs = "6.0.0"
-rusqlite = { version = "0.37.0", features = ["bundled", "column_decltype"] }
+rusqlite = { version = "0.37.0", features = ["bundled-sqlcipher-vendored-openssl", "column_decltype"] }
 duckdb = { version = "1.4.2", features = ["bundled"] }
 chrono = { version = "0.4", features = ["serde"] }
 futures-util = "0.3.31"
 rustls-pemfile = "2.2.0"
 bytes = "1.10.1"
 hex = "0.4.3"
+rand = "0.8"
 sqlparser = "0.59.0"
 rfd = "0.15.4"
 keyring = { version = "3.2.0", features = ["apple-native", "windows-native", "sync-secret-service"] }
