feat(sqlite): add SQLCipher utilities module and refactor encryption handling
Extract SQLCipher-related functionality into a dedicated utils module and refactor database connection handling to use it. This includes:
- Adding new `sqlite_cipher` module with common encryption operations
- Using `secrecy` crate for secure string handling
- Simplifying key management in storage
- Centralizing SQLite pragma settings

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -51,6 +51,8 @@ tiberius = { version = "0.12", default-features = false, features = ["rustls", "
 tokio-util = { version = "0.7", features = ["compat"] }
 tokio-rustls = "0.26.0"
 rustls-pki-types = "1.7.0"
+zeroize = "1.6"
+secrecy = "0.8"
 
 [profile.release]
 panic = "abort"
