feat(storage): add storage encryption management commands
- Add commands for applying cipher settings, maintenance, and key rotation
- Implement automatic cipher settings application at startup
- Improve key management with secure backup deletion option

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,4 +63,6 @@ jobs:
       - uses: ikalnytskyi/action-setup-postgres@v8
         id: postgres
       - name: Run unit tests
+        env:
+          PGPAD_APP_KEY: '0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef'
         run: cargo test --locked
