feat(sqlite): improve database encryption with backup API fallback
- Add "backup" feature to rusqlite dependency for backup API support
- Implement fallback to backup API when SQLCipher attach fails (non-Windows)
- Handle Windows-specific edge cases with proper error reporting
- Add connection management to prevent file lock issues during rekey
- Relax cipher integrity check requirements on Windows
- Add comprehensive tests for encryption scenarios

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -31,7 +31,7 @@ rustls-native-certs = "0.8.1"
 webpki-roots = "1.0.2"
 tokio-postgres-rustls = "0.13.0"
 dirs = "6.0.0"
-rusqlite = { version = "0.37.0", features = ["bundled-sqlcipher-vendored-openssl", "column_decltype"] }
+rusqlite = { version = "0.37.0", features = ["bundled-sqlcipher-vendored-openssl", "column_decltype", "backup"] }
 duckdb = { version = "1.4.2", features = ["bundled"] }
 chrono = { version = "0.4", features = ["serde"] }
 futures-util = "0.3.31"
