feat(sqlite): add unicode normalization and strict cipher policy
- Add unicode-normalization dependency for consistent passphrase handling
- Implement strict cipher policy checks for KDF iterations and HMAC usage
- Improve SQLCipher key application with hex format support
- Refactor cipher settings application for better maintainability

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -51,8 +51,9 @@ tiberius = { version = "0.12", default-features = false, features = ["rustls", "
 tokio-util = { version = "0.7", features = ["compat"] }
 tokio-rustls = "0.26.0"
 rustls-pki-types = "1.7.0"
-zeroize = "1.6"
+zeroize = "1.7"
 secrecy = "0.8"
+unicode-normalization = "0.1.23"
 
 [profile.release]
 panic = "abort"
