feat(ci): add docker-based ci setup with postgres and tests
fix(storage): handle sqlcipher issues on windows platform
- Disable key rotation and integrity checks on Windows due to SQLCipher build issues
- Add fallback to plain database when SQLCipher operations fail on Windows

refactor(sqlite_cipher): improve error handling and sql execution
- Add exec_ignore_result helper to handle SQL execution errors gracefully
- Improve SQLCipher configuration handling and memory management

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,15 @@ services:
     # runtime needs to access DB hosts on your network
     network_mode: bridge
 
+  ci:
+    build:
+      context: .
+      dockerfile: Dockerfile.ci
+    profiles: ['ci']
+    shm_size: '2gb'
+    environment:
+      - PGPAD_APP_KEY=0123456789abcdef0123456789abcdef0123456789abcdef0123456789abcdef
+
 volumes:
   pgpad_data:
     external: false
